--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
